tests/errors/sem7.kt
fun main(){
    val mixed: Int = 3.14

}